// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Appbar /> sidebar is open in multi-tenant login should match snapshot 1`] = `
.emotion-0 {
  background-color: #fff;
  color: #212121;
  -webkit-transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),0px 4px 5px rgba(0, 0, 0, 0.14),0px 1px 10px rgba(0, 0, 0, 0.12);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  box-sizing: border-box;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  position: fixed;
  z-index: 1100;
  top: 0;
  left: auto;
  right: 0;
  background-color: #2196F3;
  color: #fff;
  z-index: 1201;
  font-weight: 500;
  font-size: 14px;
  background-color: #fff;
  box-shadow: none;
  margin-left: 0px;
  width: 100%;
  -webkit-transition: margin 195ms cubic-bezier(0.4, 0, 0.6, 1) 0ms,width 195ms cubic-bezier(0.4, 0, 0.6, 1) 0ms;
  transition: margin 195ms cubic-bezier(0.4, 0, 0.6, 1) 0ms,width 195ms cubic-bezier(0.4, 0, 0.6, 1) 0ms;
}

@media print {
  .emotion-0 {
    position: absolute;
  }
}

.emotion-1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 56px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 16px;
  padding-right: 16px;
}

@media (min-width:0px) and (orientation: landscape) {
  .emotion-1 {
    min-height: 48px;
  }
}

@media (min-width:600px) {
  .emotion-1 {
    min-height: 64px;
  }
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.emotion-3 {
  padding: 8px;
  padding-left: 0px;
  margin-right: 16px;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  font-size: 0.875rem;
  font-weight: 500;
  letter-spacing: 0.4px;
  text-transform: capitalize;
  font-family: Roboto,sans-serif;
  line-height: 1.75;
  min-width: 64px;
  padding: 5px 15px;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  border: 1px solid rgba(224, 224, 224, 0.5);
  color: #E0E0E0;
  border-radius: 4px;
  color: #212121;
  border-color: rgba(0, 0, 0, 0.23);
  min-width: unset;
  padding: 6px 8px;
}

.emotion-4::-moz-focus-inner {
  border-style: none;
}

.emotion-4.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-4 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-4:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgba(224, 224, 224, 0.04);
  border: 1px solid #E0E0E0;
}

@media (hover: none) {
  .emotion-4:hover {
    background-color: transparent;
  }
}

.emotion-4.Mui-disabled {
  color: #BDBDBD;
  border: 1px solid #E0E0E0;
}

.emotion-4.Mui-disabled {
  border: 1px solid #E0E0E0;
}

.emotion-4:hover {
  border-color: rgba(0, 0, 0, 0.23);
  background-color: rgba(33, 33, 33, 0.04);
}

.emotion-5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.5rem;
}

.emotion-6 {
  overflow: hidden;
  pointer-events: none;
  position: absolute;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border-radius: inherit;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  font-size: 0.9375rem;
  font-weight: 500;
  letter-spacing: 0.4px;
  text-transform: capitalize;
  font-family: Roboto,sans-serif;
  line-height: 1.75;
  min-width: 64px;
  padding: 7px 21px;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  border: 1px solid rgba(224, 224, 224, 0.5);
  color: #E0E0E0;
  border-radius: 4px;
  color: #212121;
  border-color: rgba(0, 0, 0, 0.23);
  color: #212121;
  font-weight: 500;
  font-size: 14px;
  height: 40px;
  padding: 0px 16px;
  word-break: keep-all;
}

.emotion-8::-moz-focus-inner {
  border-style: none;
}

.emotion-8.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-8 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-8:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgba(224, 224, 224, 0.04);
  border: 1px solid #E0E0E0;
}

@media (hover: none) {
  .emotion-8:hover {
    background-color: transparent;
  }
}

.emotion-8.Mui-disabled {
  color: #BDBDBD;
  border: 1px solid #E0E0E0;
}

.emotion-8.Mui-disabled {
  border: 1px solid #E0E0E0;
}

.emotion-8:hover {
  border-color: rgba(0, 0, 0, 0.23);
  background-color: rgba(33, 33, 33, 0.04);
}

.emotion-8 .MuiButton-endIcon {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-left: 1px solid #E0E0E0;
  padding-left: 8px;
}

.emotion-9 {
  display: inherit;
  margin-right: -4px;
  margin-left: 8px;
}

.emotion-9>*:nth-of-type(1) {
  font-size: 22px;
}

.emotion-12 .groupProfile {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  color: #212121;
  font-weight: 500;
  font-size: 14px;
  text-transform: unset;
  cursor: pointer;
  margin-left: 32px;
  border: none;
}

.emotion-12 .avatar {
  margin-right: 8px;
  width: 32px;
  height: 32px;
}

.emotion-13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  font-size: 0.875rem;
  font-weight: 500;
  letter-spacing: 0.4px;
  text-transform: capitalize;
  font-family: Roboto,sans-serif;
  line-height: 1.75;
  min-width: 64px;
  padding: 6px 8px;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  color: #E0E0E0;
  border-radius: 4px;
  color: #212121;
  padding-right: 0;
}

.emotion-13::-moz-focus-inner {
  border-style: none;
}

.emotion-13.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-13 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-13:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgba(224, 224, 224, 0.04);
}

@media (hover: none) {
  .emotion-13:hover {
    background-color: transparent;
  }
}

.emotion-13.Mui-disabled {
  color: #BDBDBD;
}

.emotion-13:hover {
  background-color: rgba(33, 33, 33, 0.04);
}

.emotion-14 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 40px;
  height: 40px;
  font-family: Roboto,sans-serif;
  font-size: 1.25rem;
  line-height: 1;
  border-radius: 50%;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #fff;
  background-color: #BDBDBD;
}

.emotion-15 {
  margin-right: 4px;
  text-align: left;
}

.emotion-16 {
  margin: 0;
  font-size: 0.875rem;
  font-weight: 400;
  letter-spacing: 0.15px;
  text-transform: none;
  font-family: Roboto,sans-serif;
  line-height: 1.43;
}

.emotion-17 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.5rem;
  color: rgba(0, 0, 0, 0.54);
}

.emotion-19 {
  margin: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-width: 0;
  border-style: solid;
  border-color: #E0E0E0;
  border-bottom-width: thin;
}

<div>
  <header
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionFixed mui-fixed emotion-0"
    data-testid="AppBar"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular emotion-1"
    >
      <div
        class="MuiBox-root emotion-2"
      >
        <div
          class="MuiBox-root emotion-3"
        >
          <button
            aria-label="AppbarChevron"
            class="MuiButton-root MuiButton-outlined MuiButton-outlinedDefault MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButtonBase-root emotion-4"
            data-testid="Appbar__chevron"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-5"
              data-testid="Appbar__chevronLeft"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
            </svg>
            <span
              class="MuiTouchRipple-root emotion-6"
            />
          </button>
        </div>
      </div>
      <div
        class="MuiBox-root emotion-7"
      >
        <button
          class="MuiButton-root MuiButton-outlined MuiButton-outlinedDefault MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButtonBase-root emotion-8"
          data-testid="LocaleSwitcher"
          tabindex="0"
          type="button"
        >
          English
          <span
            class="MuiButton-endIcon MuiButton-iconSizeLarge emotion-9"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-5"
              data-testid="ExpandMoreIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root emotion-6"
          />
        </button>
        <div>
          <span
            class="emotion-12"
          >
            <button
              class="MuiButton-root MuiButton-text MuiButton-textDefault MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root groupProfile emotion-13"
              data-testid="Appbar__profileButton"
              tabindex="0"
              type="button"
            >
              <div
                class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault avatar emotion-14"
              >
                N
              </div>
              <div
                class="MuiBox-root emotion-15"
                data-testid="Appbar__role"
              >
                <p
                  class="MuiTypography-root MuiTypography-body2 emotion-16"
                >
                  School Admin of School
                </p>
              </div>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-colorAction MuiSvgIcon-fontSizeMedium emotion-17"
                data-testid="ArrowDropDownIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="m7 10 5 5 5-5z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root emotion-6"
              />
            </button>
          </span>
        </div>
      </div>
    </div>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth emotion-19"
    />
  </header>
</div>
`;

exports[`<Appbar /> sidebar is open in normal login should match snapshot 1`] = `
.emotion-0 {
  background-color: #fff;
  color: #212121;
  -webkit-transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),0px 4px 5px rgba(0, 0, 0, 0.14),0px 1px 10px rgba(0, 0, 0, 0.12);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  box-sizing: border-box;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  position: fixed;
  z-index: 1100;
  top: 0;
  left: auto;
  right: 0;
  background-color: #2196F3;
  color: #fff;
  z-index: 1201;
  font-weight: 500;
  font-size: 14px;
  background-color: #fff;
  box-shadow: none;
  margin-left: 0px;
  width: 100%;
  -webkit-transition: margin 195ms cubic-bezier(0.4, 0, 0.6, 1) 0ms,width 195ms cubic-bezier(0.4, 0, 0.6, 1) 0ms;
  transition: margin 195ms cubic-bezier(0.4, 0, 0.6, 1) 0ms,width 195ms cubic-bezier(0.4, 0, 0.6, 1) 0ms;
}

@media print {
  .emotion-0 {
    position: absolute;
  }
}

.emotion-1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 56px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 16px;
  padding-right: 16px;
}

@media (min-width:0px) and (orientation: landscape) {
  .emotion-1 {
    min-height: 48px;
  }
}

@media (min-width:600px) {
  .emotion-1 {
    min-height: 64px;
  }
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.emotion-3 {
  padding: 8px;
  padding-left: 0px;
  margin-right: 16px;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  font-size: 0.875rem;
  font-weight: 500;
  letter-spacing: 0.4px;
  text-transform: capitalize;
  font-family: Roboto,sans-serif;
  line-height: 1.75;
  min-width: 64px;
  padding: 5px 15px;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  border: 1px solid rgba(224, 224, 224, 0.5);
  color: #E0E0E0;
  border-radius: 4px;
  color: #212121;
  border-color: rgba(0, 0, 0, 0.23);
  min-width: unset;
  padding: 6px 8px;
}

.emotion-4::-moz-focus-inner {
  border-style: none;
}

.emotion-4.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-4 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-4:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgba(224, 224, 224, 0.04);
  border: 1px solid #E0E0E0;
}

@media (hover: none) {
  .emotion-4:hover {
    background-color: transparent;
  }
}

.emotion-4.Mui-disabled {
  color: #BDBDBD;
  border: 1px solid #E0E0E0;
}

.emotion-4.Mui-disabled {
  border: 1px solid #E0E0E0;
}

.emotion-4:hover {
  border-color: rgba(0, 0, 0, 0.23);
  background-color: rgba(33, 33, 33, 0.04);
}

.emotion-5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.5rem;
}

.emotion-6 {
  overflow: hidden;
  pointer-events: none;
  position: absolute;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border-radius: inherit;
}

.emotion-7 {
  margin: auto;
  max-width: 200px;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  font-size: 0.9375rem;
  font-weight: 500;
  letter-spacing: 0.4px;
  text-transform: capitalize;
  font-family: Roboto,sans-serif;
  line-height: 1.75;
  min-width: 64px;
  padding: 7px 21px;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  border: 1px solid rgba(224, 224, 224, 0.5);
  color: #E0E0E0;
  border-radius: 4px;
  color: #212121;
  border-color: rgba(0, 0, 0, 0.23);
  color: #212121;
  font-weight: 500;
  font-size: 14px;
  height: 40px;
  padding: 0px 16px;
  word-break: keep-all;
}

.emotion-9::-moz-focus-inner {
  border-style: none;
}

.emotion-9.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-9 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-9:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgba(224, 224, 224, 0.04);
  border: 1px solid #E0E0E0;
}

@media (hover: none) {
  .emotion-9:hover {
    background-color: transparent;
  }
}

.emotion-9.Mui-disabled {
  color: #BDBDBD;
  border: 1px solid #E0E0E0;
}

.emotion-9.Mui-disabled {
  border: 1px solid #E0E0E0;
}

.emotion-9:hover {
  border-color: rgba(0, 0, 0, 0.23);
  background-color: rgba(33, 33, 33, 0.04);
}

.emotion-9 .MuiButton-endIcon {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-left: 1px solid #E0E0E0;
  padding-left: 8px;
}

.emotion-10 {
  display: inherit;
  margin-right: -4px;
  margin-left: 8px;
}

.emotion-10>*:nth-of-type(1) {
  font-size: 22px;
}

.emotion-13 .groupProfile {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  color: #212121;
  font-weight: 500;
  font-size: 14px;
  text-transform: unset;
  cursor: pointer;
  margin-left: 32px;
  border: none;
}

.emotion-13 .avatar {
  margin-right: 8px;
  width: 32px;
  height: 32px;
}

.emotion-14 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  font-size: 0.875rem;
  font-weight: 500;
  letter-spacing: 0.4px;
  text-transform: capitalize;
  font-family: Roboto,sans-serif;
  line-height: 1.75;
  min-width: 64px;
  padding: 6px 8px;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  color: #E0E0E0;
  border-radius: 4px;
  color: #212121;
  padding-right: 0;
}

.emotion-14::-moz-focus-inner {
  border-style: none;
}

.emotion-14.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-14 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-14:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgba(224, 224, 224, 0.04);
}

@media (hover: none) {
  .emotion-14:hover {
    background-color: transparent;
  }
}

.emotion-14.Mui-disabled {
  color: #BDBDBD;
}

.emotion-14:hover {
  background-color: rgba(33, 33, 33, 0.04);
}

.emotion-15 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 40px;
  height: 40px;
  font-family: Roboto,sans-serif;
  font-size: 1.25rem;
  line-height: 1;
  border-radius: 50%;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #fff;
  background-color: #BDBDBD;
}

.emotion-16 {
  margin-right: 4px;
  text-align: left;
}

.emotion-17 {
  margin: 0;
  font-size: 0.875rem;
  font-weight: 400;
  letter-spacing: 0.15px;
  text-transform: none;
  font-family: Roboto,sans-serif;
  line-height: 1.43;
}

.emotion-18 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.5rem;
  color: rgba(0, 0, 0, 0.54);
}

.emotion-20 {
  margin: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-width: 0;
  border-style: solid;
  border-color: #E0E0E0;
  border-bottom-width: thin;
}

<div>
  <header
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionFixed mui-fixed emotion-0"
    data-testid="AppBar"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular emotion-1"
    >
      <div
        class="MuiBox-root emotion-2"
      >
        <div
          class="MuiBox-root emotion-3"
        >
          <button
            aria-label="AppbarChevron"
            class="MuiButton-root MuiButton-outlined MuiButton-outlinedDefault MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButtonBase-root emotion-4"
            data-testid="Appbar__chevron"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-5"
              data-testid="Appbar__chevronLeft"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
            </svg>
            <span
              class="MuiTouchRipple-root emotion-6"
            />
          </button>
        </div>
        <div
          class="MuiBox-root emotion-7"
        >
          <svg
            data-testid="Appbar__logo"
            fill="none"
            height="26"
            viewBox="0 0 120 26"
            width="120"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0)"
            >
              <path
                d="M99.2335 5.41605C100.629 5.41605 101.76 4.20362 101.76 2.70802C101.76 1.21242 100.629 0 99.2335 0C97.8379 0 96.7065 1.21242 96.7065 2.70802C96.7065 4.20362 97.8379 5.41605 99.2335 5.41605Z"
                fill="#E91E63"
              />
              <path
                d="M14.491 8.73047C12.4072 8.73047 10.7305 9.7492 10.0239 11.3869C9.31736 9.73631 7.64072 8.73047 5.55689 8.73047C2.28743 8.73047 0 11.4256 0 15.2813V25.4171H3.47305V15.3071C3.47305 13.6307 4.41916 12.4572 5.77245 12.4572C7.42515 12.4572 8.28742 13.6049 8.28742 15.7584V25.4042H11.7605V15.7584C11.7605 13.592 12.6347 12.4572 14.2754 12.4572C15.6287 12.4572 16.5748 13.6307 16.5748 15.3071V25.4171H20.0479V15.2813C20.0479 11.4256 17.7605 8.73047 14.491 8.73047Z"
                fill="#2196F3"
              />
              <path
                d="M35.2577 10.8711C34.2757 9.52998 32.5751 8.73047 30.623 8.73047C25.8566 8.73047 22.647 13.1536 22.647 17.2801C22.647 21.484 25.5691 25.8297 30.4673 25.8297C32.3715 25.8297 34.1679 25.0044 35.2458 23.6633V25.4042H38.7188V9.15602H35.2458V10.8711H35.2577ZM35.3775 17.293C35.3775 20.0139 33.3176 22.3093 30.8745 22.3093C28.3595 22.3093 26.3116 20.0526 26.3116 17.293C26.3116 14.5334 28.3595 12.2767 30.8745 12.2767C33.3176 12.2767 35.3775 14.5721 35.3775 17.293Z"
                fill="#2196F3"
              />
              <path
                d="M50.3952 8.73047C48.5269 8.73047 46.9341 9.52998 45.9521 10.9227V9.16891H42.479V25.4171H45.9521V16.3387C45.9521 13.9918 47.3293 12.4701 49.4491 12.4701C51.6886 12.4701 52.8263 13.7983 52.8263 16.4032V25.4171H56.2994V15.6424C56.2874 11.7738 53.7006 8.73047 50.3952 8.73047Z"
                fill="#2196F3"
              />
              <path
                d="M71.5448 10.8711C70.5628 9.52998 68.8622 8.73047 66.9101 8.73047C62.1437 8.73047 58.9341 13.1536 58.9341 17.2801C58.9341 21.484 61.8562 25.8297 66.7544 25.8297C68.6586 25.8297 70.455 25.0044 71.5329 23.6633V25.4042H75.0059V9.15602H71.5329V10.8711H71.5448ZM71.6766 17.293C71.6766 20.0139 69.6167 22.3093 67.1736 22.3093C64.6586 22.3093 62.6107 20.0526 62.6107 17.293C62.6107 14.5334 64.6586 12.2767 67.1736 12.2767C69.6047 12.2767 71.6766 14.5721 71.6766 17.293Z"
                fill="#2196F3"
              />
              <path
                d="M86.9941 8.7299C85.1019 8.7299 83.1738 9.60678 82.2397 10.8705V4.42285H78.7666V25.4165H82.2397V23.7143C83.1618 24.9651 85.0899 25.8549 86.9941 25.8549C90.8025 25.8549 94.8504 22.8503 94.8504 17.3053C94.8504 11.7603 90.8025 8.7299 86.9941 8.7299ZM91.1977 17.2924C91.1977 20.1939 89.3175 22.3087 86.7187 22.3087C84.1199 22.3087 82.2397 20.1939 82.2397 17.2924C82.2397 14.391 84.1199 12.2761 86.7187 12.2761C89.3055 12.2761 91.1977 14.3781 91.1977 17.2924Z"
                fill="#2196F3"
              />
              <path
                d="M100.97 10.5225H97.4971V25.3392H100.97V10.5225Z"
                fill="#2196F3"
              />
              <path
                d="M111.94 8.73047C106.539 8.73047 103.628 13.1407 103.628 17.2801C103.628 21.4195 106.539 25.8297 111.94 25.8297C114.598 25.791 117.078 24.3983 118.934 21.8837L119.042 21.7419L116.084 19.9881L116.012 20.0913C114.91 21.6645 113.473 22.5027 111.844 22.5027C109.616 22.5027 107.724 20.8134 107.473 18.6212H119.76V17.8475C119.76 11.5674 115.185 8.73047 111.94 8.73047ZM111.509 12.0704C113.473 12.0704 115.03 13.347 115.688 15.4876H107.497C108.036 13.3728 109.557 12.0704 111.509 12.0704Z"
                fill="#2196F3"
              />
            </g>
            <defs>
              <clippath
                id="clip0"
              >
                <rect
                  fill="white"
                  height="25.8423"
                  width="119.76"
                />
              </clippath>
            </defs>
          </svg>
        </div>
      </div>
      <div
        class="MuiBox-root emotion-8"
      >
        <button
          class="MuiButton-root MuiButton-outlined MuiButton-outlinedDefault MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButtonBase-root emotion-9"
          data-testid="LocaleSwitcher"
          tabindex="0"
          type="button"
        >
          English
          <span
            class="MuiButton-endIcon MuiButton-iconSizeLarge emotion-10"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-5"
              data-testid="ExpandMoreIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root emotion-6"
          />
        </button>
        <div>
          <span
            class="emotion-13"
          >
            <button
              class="MuiButton-root MuiButton-text MuiButton-textDefault MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root groupProfile emotion-14"
              data-testid="Appbar__profileButton"
              tabindex="0"
              type="button"
            >
              <div
                class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault avatar emotion-15"
              >
                N
              </div>
              <div
                class="MuiBox-root emotion-16"
                data-testid="Appbar__role"
              >
                <p
                  class="MuiTypography-root MuiTypography-body2 emotion-17"
                >
                  School Admin of School
                </p>
              </div>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-colorAction MuiSvgIcon-fontSizeMedium emotion-18"
                data-testid="ArrowDropDownIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="m7 10 5 5 5-5z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root emotion-6"
              />
            </button>
          </span>
        </div>
      </div>
    </div>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth emotion-20"
    />
  </header>
</div>
`;
